--- a/src/sample/scenes/changeUsers.fxml
+++ b/src/sample/scenes/changeUsers.fxml
@@ -25,5 +25,13 @@
             <Cursor fx:constant="HAND" />
          </cursor></Button>
       <PasswordField fx:id="password_data" focusTraversable="false" layoutX="226.0" layoutY="188.0" prefHeight="35.0" prefWidth="190.0" promptText="Пароль" styleClass="text-input" stylesheets="@../styles/style.css" AnchorPane.leftAnchor="205.0" AnchorPane.rightAnchor="205.0" />
+      <Button fx:id="back" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="83.0" stylesheets="@../styles/style.css" text="Назад" textFill="WHITE" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="41.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
